# MistMCP

./: .env.example  .gitignore  README.md  pyproject.toml
commons/: jwks_cache.py  logging_conf.py
gateway/: auth.py  main.py  mcp_client.py  policy_rbac.json  rbac.py  rbac_prompt.txt  settings.py
gateway/tests/: test_rbac.py
scripts/: gen_dev_jwks.py
servers/mist-ro/: caching.py  prompts.py  requirements.txt  resources.py  server.py  settings.py  tools.py
servers/mist-rw/: caching.py  prompts.py  resources.py  server.py  settings.py  tools.py
src/mist_mcp/: __init__.py  client.py  config.py  glossary.py  server.py  tools.py
