[project]
name = "mist-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Juniper Mist network automation"
authors = [{name = ""}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.0.8",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.4.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
